--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-leaflet": "^4.2.1",
     "react-loader-spinner": "^5.3.4",
     "react-query": "^3.39.3",
